# eightyeightthirtyone

./: .gitignore  README.md  docker-compose.yml  graphProcessor.js  index.html  index.js  package-lock.json  package.json  scraper.js
client/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  global.css
scraper/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  removeEmptyLinks.js
scraper/src/: main.rs  manager.rs  types.rs  worker.rs
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.json  docker-compose.yml  package-lock.json  package.json  tsconfig.json
server/prisma/: schema.prisma
server/prisma/migrations/20231224180649_init/: migration.sql
server/src/: index.ts  main.rs
src/: App.tsx  global.css  main.tsx
