[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
axum = "0.7.2"
axum-auth = { version = "0.7.0", features = ["auth-bearer"] }
base64 = "0.21.5"
chrono = "0.4.31"
fred = "7.1.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
